2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdialog.c (gtk_dialog_map): Don't loop forever
	here, even if the only focusable widgets are labels.

	* gtk/gtkmodules.c (load_module): Don't reverse the order
	of modules when putting them in gtk_modules.  (#162676, Dennis
	Cranston, patch by Remus Draica)
	
	* gtk/gtktreeview.c (gtk_tree_view_search_move): Don't crash 
	if the tree is empty.  (#164669, Priit Laes)

Wed Jan 19 18:57:02 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): Call
	GDK_DISPLAY_XDISPLAY with a display, not a window. Clean up the
	function a bit too.

Wed Jan 19 17:17:31 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): Squash
	strict aliasing warning in _NET_VIRTUAL_ROOTS code.

2005-01-19  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (update_keymap,
	gdk_keymap_translate_keyboard_state): Handle keyboards with
	ShiftLock (and not CapsLock) correctly. (#161814)

2005-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond):
	In save mode, don't return paths containing nonexisting 
	directories.  (#162443, Jean Marie Favreau)

	* gtk/gtkobject.c (gtk_object_add_arg_type): Use GLib limit 
	macros to avoid sparse warnings. Pointed out by Kjartan Maraas.

	* gdk/x11/gdkdisplay-x11.c: Precache the _NET_VIRTUAL_ROOTS
	atom.

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): 
	Support _NET_VIRTUAL_ROOTS.  (#163910, Carsten Haitzler)

Tue Jan 18 13:56:09 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkfilechooserdefault.c (pending_op_queue): Actually assign
	PENDING_OP_NONE.

Tue Jan 18 13:46:46 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids):
	disambiguate nested if/else.

2005-01-18  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (pending_op_queue): Don't queue an